--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
   "dependencies": {
     "i-": "^1.1.5",
     "mapbox-gl": "^1.5.0",
-    "object-fit-images": "^3.2.4"
+    "object-fit-images": "^3.2.4",
+    "swiper": "^5.2.0"
   }
 }
