--- a/package.json
+++ b/package.json
@@ -62,7 +62,9 @@
     "node": "8.15"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "body-scroll-lock": "^2.6.4",
+    "fullpage.js": "^3.0.7",
     "i-": "^1.1.5",
     "mapbox-gl": "^1.5.0",
     "object-fit-images": "^3.2.4",
