--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "del": "^4.1.1",
     "eslint": "^6.5.1",
     "eslint-config-htmlacademy": "^0.5.2",
+    "grunt-contrib-imagemin": "^3.1.0",
     "gulp": "4.0.x",
     "gulp-concat": "^2.6.1",
     "gulp-csso": "^3.0.1",
@@ -66,6 +67,7 @@
     "body-scroll-lock": "^2.6.4",
     "fullpage.js": "^3.0.7",
     "i-": "^1.1.5",
+    "imagemin-mozjpeg": "^8.0.0",
     "mapbox-gl": "^1.5.0",
     "object-fit-images": "^3.2.4",
     "swiper": "^5.2.0"
